src/test/test-models/bad/data_index/non_data_index13.stan
parameters {
  real y[3];

}
transformed parameters {
  corr_matrix[size(y)] z;
}
